# Multi-modal-Sensor-based-System

./: README.md
1_Document/: KIRO-SWD-HLD-01 v1.0a (SYS-TPL).docx  KIRO-SWD-SAD-01 v1.0a (SYS-TPL).docx
3_Code/ROS/kiro_sync_transfer/: CMakeLists.txt  package.xml
3_Code/ROS/kiro_sync_transfer/include/: CommonConfig.h  CommonStruct.h  SyncTransfer.h  SyncTransfer_Controller_ROS.h  SyncTransfer_Controller_XMLRPC.h  SyncTransfer_Model.h  memsync.h
3_Code/ROS/kiro_sync_transfer/msg/: CameraInfo.msg  ImageDepth.msg
3_Code/ROS/kiro_sync_transfer/src/: SyncTransfer_Controller_ROS.cpp  SyncTransfer_Controller_XMLRPC.cpp  SyncTransfer_Model.cpp  SyncTransfer_Node.cpp
3_Code/ROS/kiro_sync_transfer/srv/: Initialize.srv  SyncAllData.srv
3_Code/gathering/sensors/ax5/: CMakeLists.txt  thermal_grabber  thermal_saver
3_Code/gathering/sensors/ax5/include/: gev_camera.h
3_Code/gathering/sensors/ax5/src/: gev_camera.cpp  grabber.cpp  saver.cpp
3_Code/gathering/sensors/nightvision/: nightvision_grabber.py  nightvision_saver.py
3_Code/gathering/sensors/realsense/: CMakeLists.txt  rgbdepth_grabber  rgbdepth_saver
3_Code/gathering/sensors/realsense/src/: grabber.cpp  saver.cpp
3_Code/gathering/sensors/rgbgs/: CMakeLists.txt  rgbgs_grabber  rgbgs_saver
3_Code/gathering/sensors/rgbgs/include/: gev_camera.h
3_Code/gathering/sensors/rgbgs/src/: gev_camera.cpp  grabber.cpp  saver.cpp
