<?xml version="1.0"?>
<package format="2">
  <name>kiro_sync_transfer</name>
  <version>1.0.0</version>
  <description>The KIRO Sync Transfer package</description>
  <maintainer email="ricow@kiro.re.kr">ricow</maintainer>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
